--- a/index.html
+++ b/index.html
@@ -8,29 +8,33 @@
   </head>
   <body>
     <header class="hero">
+      <div class="container">
       <p class="logo">Front-end News!</p>
+      </div>
       </header>
-      <main>
-        <ol>
-          <li>
-            <a href="#">Frontend Design</a>
+      <main class="content">
+        <div class="container">
+        <ol class="news">
+          <li class="news-item">
+            <a class="news-link" href="#">Frontend Design</a>
           </li>
-          <li>
-            <a href="#">Getting Ready for HTTP/2</a>
+          <li class="news-item">
+            <a class="news-link" href="#">Getting Ready for HTTP/2</a>
           </li>
-          <li>
-            <a href="#">Managing Typography on Large Apps</a>
+          <li class="news-item">
+            <a class="news-link" href="#">Managing Typography on Large Apps</a>
           </li>
-          <li>
-            <a href="#">Estimating A Front End Web Dev Job</a>
+          <li class="news-item">
+            <a class="news-link" href="#">Estimating A Front End Web Dev Job</a>
           </li>
-          <li>
-            <a href="#">The One CSS Feature I Really want</a>
+          <li class="news-item">
+            <a class="news-link" href="#">The One CSS Feature I Really want</a>
           </li>
-          <li>
-            <a href="#">Something I didn't get</a>
+          <li class="news-item">
+            <a class="news-link" href="#">Something I didn't get</a>
           </li>
         </ol>
+      </div>
       </main>
   </body>
 </html>
