last css styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Front-end News </title>
     <meta charset="utf-8"/>
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Montserrat:700"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,400i,700"/>
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="main.css" />
   </head>
@@ -21,8 +23,8 @@
               <li class="news-meta-item">
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
-              <li><a href="#">2 comments</a></li>
-              <li><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a href="#">2 comments</a></li>
+              <li class="news-meta-item"><a href="#">Like this story!</a></li>
             </ul>
           </li>
           <li class="news-item">
@@ -31,8 +33,8 @@
               <li class="news-meta-item">
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
-              <li><a href="#">2 comments</a></li>
-              <li><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a href="#">2 comments</a></li>
+              <li class="news-meta-item"><a href="#">Like this story!</a></li>
             </ul>
           </li>
           <li class="news-item">
@@ -41,8 +43,8 @@
               <li class="news-meta-item">
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
-              <li><a href="#">2 comments</a></li>
-              <li><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a href="#">2 comments</a></li>
+              <li class="news-meta-item"><a href="#">Like this story!</a></li>
             </ul>
           </li>
           <li class="news-item">
@@ -51,8 +53,8 @@
               <li class="news-meta-item">
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
-              <li><a href="#">2 comments</a></li>
-              <li><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a href="#">2 comments</a></li>
+              <li class="news-meta-item"><a href="#">Like this story!</a></li>
             </ul>
           </li>
           <li class="news-item">
@@ -61,8 +63,8 @@
               <li class="news-meta-item">
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
-              <li><a href="#">2 comments</a></li>
-              <li><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a href="#">2 comments</a></li>
+              <li class="news-meta-item"><a href="#">Like this story!</a></li>
             </ul>
           </li>
           <li class="news-item">
@@ -71,8 +73,8 @@
               <li class="news-meta-item">
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
-              <li><a href="#">2 comments</a></li>
-              <li><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a href="#">2 comments</a></li>
+              <li class="news-meta-item"><a href="#">Like this story!</a></li>
             </ul>
           </li>
         </ol>
