--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
               <li class="news-meta-item"><a href="#">2 comments</a></li>
-              <li class="news-meta-item"><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a class="js-like" href="#">Like this story!</a></li>
             </ul>
           </li>
           <li class="news-item">
@@ -34,7 +34,7 @@
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
               <li class="news-meta-item"><a href="#">2 comments</a></li>
-              <li class="news-meta-item"><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a class="js-like" href="#">Like this story!</a></li>
             </ul>
           </li>
           <li class="news-item">
@@ -44,7 +44,7 @@
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
               <li class="news-meta-item"><a href="#">2 comments</a></li>
-              <li class="news-meta-item"><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a class="js-like" href="#">Like this story!</a></li>
             </ul>
           </li>
           <li class="news-item">
@@ -54,7 +54,7 @@
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
               <li class="news-meta-item"><a href="#">2 comments</a></li>
-              <li class="news-meta-item"><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a class="js-like" href="#">Like this story!</a></li>
             </ul>
           </li>
           <li class="news-item">
@@ -64,7 +64,7 @@
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
               <li class="news-meta-item"><a href="#">2 comments</a></li>
-              <li class="news-meta-item"><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a class="js-like" href="#">Like this story!</a></li>
             </ul>
           </li>
           <li class="news-item">
@@ -74,11 +74,13 @@
               <em>Posted by:</em>
               <a href="#">Dan Denney</a></li>
               <li class="news-meta-item"><a href="#">2 comments</a></li>
-              <li class="news-meta-item"><a href="#">Like this story!</a></li>
+              <li class="news-meta-item"><a class="js-like" href="#">Like this story!</a></li>
             </ul>
           </li>
         </ol>
       </div>
       </main>
+      <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+      <script src="app.js"></script>
   </body>
 </html>
