--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
       </header>
       <main class="content">
         <div class="container">
+          <header class="subheader">
+              <h1>Latest News</h1>
+              <p>The latest links in the fron-end community.<a class="js-add-link" href="#">Add a link now!</a></p>
+              <form class="form js-form">
+                <label class="form-label" for="form-link-input">Add a story:</label>
+                <input class="form-input" type="text" id="form-link-input" />
+              </form>
+          </header>
+
         <ol class="news">
           <li class="news-item">
             <a class="news-link" href="#">Frontend Design</a>
